tests/NormalTests/paczka1/small_fuzzy/97587931.err
Error in line 3: wFDi3mhao S855 69,2
Error in line 2: ruBDZ8W S855 24,0
Error in line 12: GgUS24K S622 39,1
